--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,9 +114,9 @@ h1 {
 .secondary-display {
     height: 17.5vh;
     width: 22.5%;
-    border: 1.5px solid black;
+    border: 1.5px solid;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .secondary-display img {
