--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,9 @@ body {
     margin: auto;
     background-color: #fcfcfc;
     font-family: 'Open Sans', sans-serif;
-    color: rgb(75,75,75)
+    color: rgb(75,75,75);
+    line-height: 1.6;
+
 }
 
 h1 {
@@ -18,6 +20,7 @@ h1 {
 
 .header-name {
     color: white;
+    font-weight: 400;
 }
 
 .resume-container {
