--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: rgb(75,75,75);
     line-height: 1.6;
-
+    max-width: 125vh;
 }
 
 h1 {
@@ -26,7 +26,7 @@ h1 {
 }
 
 .container {
-    max-width: 125vh;
+    /* max-width: 125vh; */
     margin: 0 auto;
     box-shadow: 0px 0px 20px 2.5px #c1c1c1;
 }
@@ -92,6 +92,12 @@ h1 {
     height: 100vh;
     padding: 50px;
     background: #fff;
+}
+
+@media (max-width: 112vh) {
+    .projects {
+        height: 120vh;
+    }
 }
 
 .span {
