--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,6 @@ h1 {
 }
 
 .container {
-    /* max-width: 125vh; */
     margin: 0 auto;
     box-shadow: 0px 0px 20px 2.5px #c1c1c1;
 }
@@ -66,6 +65,7 @@ nav {
     position: sticky;
     top: 0;
     opacity: 0.9;
+    z-index: 1;
 }
 
 a {
@@ -76,6 +76,10 @@ a {
 
 a:hover {
     color: lightsteelblue;
+}
+
+a:active {
+    filter: brightness(75%);
 }
 
 h1 {
@@ -130,7 +134,6 @@ h1 {
 .secondary-display {
     height: 17.5vh;
     width: 22.5%;
-    border: 1.5px solid;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -140,16 +143,22 @@ h1 {
     width: 100%;
     border-radius: 3px;
     object-fit: cover;
+    filter: brightness(85%);
+    transition: all 0.2s ease;
 }
 
-.secondary-display:hover {
-    border: 1.5px solid lightblue;
+.secondary-display:hover img {
+    filter: brightness(1);
+    cursor: pointer;
+}
+
+.secondary-display:active {
+    box-shadow: none;
 }
 
 .selected-display {
     height: 35vh;
     width: 50%;
-    border: 1.5px solid black;
     border-radius: 5px;
     margin-right: 50px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -234,4 +243,8 @@ img[alt="footer-icon"] {
 
 img[alt="footer-icon"]:hover {
     opacity: 1;
+}
+
+p {
+    font-size: 16px;
 }
